Fix color contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,7 +89,7 @@
 	--gray-999: #090b11;
 
 	--accent-light: #3EB489;
-	--accent-regular: #3EB489;
+	--accent-regular: #1c7e5a;
 	--accent-dark: #3EB489;
 	--accent-overlay: hsla(280, 89%, 67%, 0.33);
 	--accent-subtle-overlay: #92e2c532;
